/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package Control;

import Modelo.entidades.Pago;
/**
 *
 * @author fabian lavalle
 */
public class ControlPago {
    
    public Pago crearPago(){
      Pago p =new Pago();
      return p;
    }
}
