/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package Entidades;

/**
 *
 * @author ESTUDIANTES
 */
public abstract class Usuario {
    protected int id;
    protected String nombre;
    private String ubicacion;

    public Usuario(int id, String nombre) {
        this.id = id;
        this.nombre = nombre;
    }

   public abstract void mostrarRol();

    @Override
    public String toString() {
        return "Usuario{" + "nombre=" + nombre + '}';
    }

    /**
     * @return the nombre
     */
    public String getNombre() {
        return nombre;
    }

    /**
     * @param nombre the nombre to set
     */
    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    /**
     * @return the id
     */
    public int getId() {
        return id;
    }

    /**
     * @return the ubicacion
     */
    public String getUbicacion() {
        return ubicacion;
    }

    /**
     * @param ubicacion the ubicacion to set
     */
    public void setUbicacion(String ubicacion) {
        this.ubicacion = ubicacion;
    }

 
    
    
    
}
